# bank-of-bill

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
bank_of_bill/: config.py  deps.py  main.py
bank_of_bill/domain/: model.py  service.py
bank_of_bill/inbound/http/: __init__.py  router.py
bank_of_bill/inbound/http/routes/: accounts.py  customers.py  loans.py
bank_of_bill/outbound/database/: account.py  crud.py  customer.py  migrate.py
bank_of_bill/outbound/database/tables/: __init__.py  account_customer_bridge_store.py  account_store.py  customer_store.py  loan_store.py
tests/: conftest.py  rest-api.http  test__main.py
tests/inbound/http/: test__healthcheck.py
tests/inbound/http/routes/: test__accounts.py  test__customers.py  test__loans.py
tests/outbound/database/: test__account_store.py  test__customer_store.py
tests/outbound/database/tables/: conftest.py  test__account_store.py  test__acount_customer_bridge_store.py  test__customer_store.py  test__loan_store.py
