# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project]
name = "bank-of-bill"
version = "0.0.0"
description = ""
authors = [{ name = "billwallis" }]
requires-python = ">=3.11"
readme = "README.md"

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "pre-commit>=3.6.2",
]
test = [
    "pytest>=8.0.2",
    "pytest-cov>=4.1.0",
]

[tool.uv]
required-version = ">=0.8,<1.0"
default-groups = "all"

[tool.uv.build-backend]
namespace = true


[tool.pytest.ini_options]
addopts = "--cov=bank_of_bill --cov-fail-under=80"
testpaths = ["tests"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    #  Use of `assert` detected
    "PLR2004", #  Magic value used in comparison
    "PLR0913", #  Too many arguments in function definition
]
